/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric-x-committer/api/committerpb";

package committerpb;

// The TX reference with respect to the block generated by the orderer.
message TxRef {
    uint64 block_num = 1; // The block number.
    uint32 tx_num = 2;    // Transaction number within the block
    string tx_id = 3;     // Transaction ID within the block.
}
